--- a/videos/templates/videos/category-page.html
+++ b/videos/templates/videos/category-page.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+
 <!-- Category information-->
 <div class="container my-5">
   <div class="row">
@@ -20,9 +21,9 @@
 </div>
 
 <div class="container my-5">
-  <div class="row">
+  <div class="row m-0 p-0">
     {% for p in category.get_projects_category_page %}
-      <div class="col-sm-6">
+      <div class="col-sm-6 m-0 p-0">
         <a href="{% url 'videos:project_detail' p.id %}"><img class="img-fluid" src="media/{{ p.project_image }}"></a>
       </div>
     {% endfor %}
