CSs file added to header.

--- a/videos/templates/videos/header.html
+++ b/videos/templates/videos/header.html
@@ -15,7 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Merienda+One&family=Nunito:wght@300&display=swap" rel="stylesheet">
 
     <!-- Our CSS File -->
-    <!--<link rel="stylesheet" type="text/css" href="">-->
+    <link href="{% static '/videos/css/style.css' %}" rel="stylesheet">
 
         
 
